[gd_scene load_steps=7 format=2]

[ext_resource path="res://games/game-2/sprites/global.png" type="Texture" id=1]
[ext_resource path="res://games/game-2/scripts/fishes.gd" type="Script" id=2]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.25, 5.5 )

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0.521569, 0, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="fish" type="Area2D"]
scale = Vector2( 2.5, 2.5 )
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 0.816814
scale = Vector2( 1.06, 1.06 )
texture = ExtResource( 1 )
flip_h = true
hframes = 4
vframes = 4

[node name="Label" type="Label" parent="."]
margin_left = -75.6
margin_top = 8.0
margin_right = 79.4
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
text = "arr[22][22]"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1.19209e-07, -0.125 )
scale = Vector2( 0.925, 0.4375 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_fish_area_entered"]
[connection signal="input_event" from="." to="." method="_on_fish_input_event"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
